# sandbox

./: README.md
palindroms/: Palindroms.hs  README.md  TestPalindroms.hs  palindroms.cabal  stack.yaml
palindroms/bench/: Main.hs
palindroms/src/: Palindroms.hs
palindroms/test/: Main.hs  TestPalindroms.hs
